[package]
name = "trace_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tracing = "0.1"
tokio-timer = "0.2"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tokio]
version = "1.35"
default-features = false
features = ["rt-multi-thread", "macros", "time"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
    "json",
    "parking_lot",
    "registry",
    "chrono",
    "ansi",
]
